<?xml version="1.0"?>
<package format="2">
    <name>core_messages</name>
    <version>0.0.0</version>
    <description>Custom message definition</description>
    <maintainer email="funabiki@space.t.u-tokyo.ac.jp">Nobuhiro Funabiki</maintainer>
    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    
    <exec_depend>pose_graph_msgs</exec_depend>
    <exec_depend>uwb_msgs</exec_depend>
    <exec_depend>agent_state_msgs</exec_depend>

    <export>
        <metapackage/>
    </export>
</package>