<?xml version="1.0"?>
<package format="2">
    <name>uwb_msgs</name>
    <version>0.0.0</version>
    <description>UWB message package</description>
    <maintainer email="funabiki@space.t.u-tokyo.ac.jp">Nobuhiro Funabiki</maintainer>
    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>std_msgs</depend>
    <depend>message_generation</depend>
    <depend>message_runtime</depend>
    
</package>